# simulator_rabotyagi

./: .gitignore  README.md  main.py  pyproject.toml  test.db
app/: app.py  enums.py  exceptions.py  models.py  schemas.py  security.py
app/api/: auth.py  deps.py  main.py  rabotyaga.py  smena.py
app/api/routes/: auth.py  rabotyaga.py  smena.py
app/core/: db.py  security.py
app/services/: base.py  rabotyaga.py  smena.py
